--- a/templates/loki-alert-rule.yaml
+++ b/templates/loki-alert-rule.yaml
@@ -1,23 +1,23 @@
 apiVersion: metacontroller.glueops.dev/v1alpha1
 kind: LokiAlertRuleGroup
 metadata:
-  name: vault-test-24
+  name: {{ .Release.Name }}
+  namespace: {{ .Release.Namespace }}
 spec:
-  name: vault-test-24
-  rules:
-    - alert: vault_errors_24
-      expr: 'rate({namespace="glueops-core-vault"} |= `[ERROR]` [1m]) > 0'
-      labels:
-        severity: critical
-        alertname: vault-alert-24
-        namespace: glueops-core-vault
-      annotations:
-        description: Vault namespace has errors!!
-        summary: Vault namespace has errors!!
-    - alert: vault_errors_25_v2
-      expr: 'rate({namespace="glueops-core-vault"} |= `[ERROR]` [1m]) > 0'
-      labels:
-        severity: critical
-      annotations:
-        description: Vault namespace has errors!!
-        summary: Vault namespace has errors!!
+  groups:
+    - name: {{ .Release.Name }}
+      rules:
+        - alert: {{ .Release.Name }}
+          expr: {{ .Values.expr }}
+          for: {{ .Values.duration }}
+          labels:
+      {{ if ne (toString .Values.labels.team) "nil" }}
+            team: {{ .Values.labels.team }}
+      {{ end }}
+      {{ if ne (toString .Values.labels.component) "nil" }}
+            component: {{ .Values.labels.component }}
+      {{ end }}
+            alertname: {{ .Release.Name }}
+            namespace: {{ .Release.Namespace }}
+          annotations:
+            description: {{ .Values.description }}
