--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: loki-lokialertrule
+name: loki-alert-rule
 description: This chart enables creation of a loki alert based on a LogQL query.
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -15,4 +15,4 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0-antonio-alpha1
+version: 0.1.0-antonio-alpha2
