feat: test new for parameter, fix shape

--- a/templates/loki-alert-rule.yaml
+++ b/templates/loki-alert-rule.yaml
@@ -4,20 +4,19 @@ metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
-  groups:
-    - name: {{ .Release.Name }}
-      rules:
-        - alert: {{ .Release.Name }}
-          expr: {{ .Values.expr }}
-          for: {{ .Values.duration }}
-          labels:
-      {{ if ne (toString .Values.labels.team) "nil" }}
-            team: {{ .Values.labels.team }}
-      {{ end }}
-      {{ if ne (toString .Values.labels.component) "nil" }}
-            component: {{ .Values.labels.component }}
-      {{ end }}
-            alertname: {{ .Release.Name }}
-            namespace: {{ .Release.Namespace }}
-          annotations:
-            description: {{ .Values.description }}
+  name: {{ .Release.Name }}
+  rules:
+    - alert: {{ .Release.Name }}
+      expr: {{ .Values.expr }}
+      for: {{ .Values.duration }}
+      labels:
+  {{ if ne (toString .Values.labels.team) "nil" }}
+        team: {{ .Values.labels.team }}
+  {{ end }}
+  {{ if ne (toString .Values.labels.component) "nil" }}
+        component: {{ .Values.labels.component }}
+  {{ end }}
+        alertname: {{ .Release.Name }}
+        namespace: {{ .Release.Namespace }}
+      annotations:
+        description: {{ .Values.description }}
